Add maintenance page in Italian

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Manutenzione in corso</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 15%;
+      background-color: #ffffff;
+      color: #333;
+    }
+    h1 { color: #444; }
+    p { font-size: 18px; }
+  </style>
+</head>
+<body>
+  <h1>Sito in manutenzione</h1>
+  <p>Stiamo lavorando per migliorare il servizio.<br>
+  Ti invitiamo a riprovare più tardi.</p>
+</body>
+</html>
