--- a/index.html
+++ b/index.html
@@ -1,23 +1,83 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>Manutenzione in corso</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sito in manutenzione – Tutela Paesaggio Sardegna</title>
+  <meta name="robots" content="noindex,nofollow">
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding-top: 15%;
-      background-color: #ffffff;
-      color: #333;
+    :root{
+      --bg:#ffffff; --fg:#333; --muted:#666; --brand:#24597a; --accent:#0aa2c0;
+      --shadow: 0 10px 30px rgba(0,0,0,.07);
     }
-    h1 { color: #444; }
-    p { font-size: 18px; }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; display:flex; align-items:center; justify-content:center;
+      background:var(--bg); color:var(--fg); font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,sans-serif;
+    }
+    .wrap{max-width:720px; padding:32px; text-align:center}
+    .logo{
+      width:140px; height:140px; margin:0 auto 18px; position:relative; filter:drop-shadow(var(--shadow));
+    }
+    /* SVG gear rotation */
+    .gear{ width:140px; height:140px; display:block; margin:0 auto; }
+    .spin{ animation: spin 2.8s linear infinite; transform-origin: 50% 50%; }
+    @keyframes spin{ to { transform: rotate(360deg) } }
+
+    /* “GIS” label in the center */
+    .gis{
+      position:absolute; inset:0; display:grid; place-items:center;
+      font-weight:700; letter-spacing:.06em; color:#fff; text-shadow:0 1px 2px rgba(0,0,0,.25);
+      pointer-events:none;
+    }
+
+    h1{font-size:clamp(22px,3vw,30px); margin:8px 0 6px; color:#444}
+    p{font-size:clamp(16px,2.2vw,18px); margin:0 0 18px}
+    .muted{color:var(--muted)}
+    .actions{display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin-top:6px}
+    .btn{
+      appearance:none; border:0; border-radius:10px; padding:10px 16px; font-weight:600;
+      background:linear-gradient(135deg,var(--brand),var(--accent)); color:#fff; text-decoration:none;
+      box-shadow:var(--shadow);
+    }
+    .btn:focus-visible{outline:3px solid rgba(10,162,192,.35); outline-offset:2px}
+
+    /* Riduce/ferma animazioni dove preferito */
+    @media (prefers-reduced-motion: reduce){
+      .spin{ animation: none }
+    }
   </style>
 </head>
 <body>
-  <h1>Sito in manutenzione</h1>
-  <p>Stiamo lavorando per migliorare il servizio.<br>
-  Ti invitiamo a riprovare più tardi.</p>
+  <main class="wrap" role="main" aria-live="polite">
+    <!-- Ingranaggio SVG con gradiente -->
+    <div class="logo" aria-hidden="true">
+      <svg class="gear" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" role="img">
+        <defs>
+          <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
+            <stop offset="0%" stop-color="#24597a"/>
+            <stop offset="100%" stop-color="#0aa2c0"/>
+          </linearGradient>
+        </defs>
+        <!-- ruota -->
+        <g class="spin" fill="url(#g)">
+          <path d="M57.4 6.5l2.3 8.9a33.7 33.7 0 0 1 9.4 4.3l8-4.3 7.8 13.6-7.3 5.2a33.6 33.6 0 0 1 1.5 10.4l8.4 3-4.9 15.1-8.7-1.3a33.9 33.9 0 0 1-7.9 8l3.7 8.3-13.6 7.8-5.5-7.4a33.8 33.8 0 0 1-10.5 1.5l-3.2 8.6-15.1-5 1.5-8.7a33.7 33.7 0 0 1-8.2-7.8l-8.5 3.7-7.8-13.6 7.6-5.6a33.6 33.6 0 0 1-1.2-10.4l-8.9-3 5-15.1 9 1.3a33.7 33.7 0 0 1 7.5-8.1l-3.9-8.3L39.7 5l5.7 7.5c3.8-.6 7.4-.6 11.9-.9zM50 34a16 16 0 1 0 0 32 16 16 0 0 0 0-32z"/>
+        </g>
+        <!-- disco centrale -->
+        <circle cx="50" cy="50" r="17" fill="#0aa2c0"/>
+      </svg>
+      <div class="gis" aria-hidden="true">GIS</div>
+    </div>
+
+    <h1>Sito in manutenzione</h1>
+    <p>Stiamo lavorando per migliorare il servizio.<br>Si invita a riprovare più tardi.</p>
+    <p class="muted">Dominio: <strong>www.tutelapaesaggiosardegna.info</strong></p>
+
+    <div class="actions">
+      <a class="btn" href="https://www.tutelapaesaggiosardegna.info" rel="noopener">Vai al sito</a>
+      <a class="btn" href="" onclick="location.reload(); return false;">Riprova</a>
+    </div>
+  </main>
 </body>
 </html>
