--- a/index.html
+++ b/index.html
@@ -7,77 +7,40 @@
   <meta name="robots" content="noindex,nofollow">
   <style>
     :root{
-      --bg:#ffffff; --fg:#333; --muted:#666; --brand:#24597a; --accent:#0aa2c0;
+      --bg:#ffffff; --fg:#333; --muted:#666; --gear:#24597a;
       --shadow: 0 10px 30px rgba(0,0,0,.07);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0; display:flex; align-items:center; justify-content:center;
-      background:var(--bg); color:var(--fg); font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,sans-serif;
+      background:var(--bg); color:var(--fg);
+      font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,sans-serif;
     }
     .wrap{max-width:720px; padding:32px; text-align:center}
-    .logo{
-      width:140px; height:140px; margin:0 auto 18px; position:relative; filter:drop-shadow(var(--shadow));
-    }
-    /* SVG gear rotation */
-    .gear{ width:140px; height:140px; display:block; margin:0 auto; }
-    .spin{ animation: spin 2.8s linear infinite; transform-origin: 50% 50%; }
-    @keyframes spin{ to { transform: rotate(360deg) } }
-
-    /* “GIS” label in the center */
-    .gis{
-      position:absolute; inset:0; display:grid; place-items:center;
-      font-weight:700; letter-spacing:.06em; color:#fff; text-shadow:0 1px 2px rgba(0,0,0,.25);
-      pointer-events:none;
-    }
+    .logo{width:140px; height:140px; margin:0 auto 18px; filter:drop-shadow(var(--shadow))}
+    .gear{width:140px; height:140px; display:block; margin:0 auto}
+    .spin{animation:spin 3s linear infinite; transform-origin:50% 50%}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    @media (prefers-reduced-motion: reduce){ .spin{animation:none} }
 
     h1{font-size:clamp(22px,3vw,30px); margin:8px 0 6px; color:#444}
-    p{font-size:clamp(16px,2.2vw,18px); margin:0 0 18px}
+    p{font-size:clamp(16px,2.2vw,18px); margin:0 0 10px}
     .muted{color:var(--muted)}
-    .actions{display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin-top:6px}
-    .btn{
-      appearance:none; border:0; border-radius:10px; padding:10px 16px; font-weight:600;
-      background:linear-gradient(135deg,var(--brand),var(--accent)); color:#fff; text-decoration:none;
-      box-shadow:var(--shadow);
-    }
-    .btn:focus-visible{outline:3px solid rgba(10,162,192,.35); outline-offset:2px}
-
-    /* Riduce/ferma animazioni dove preferito */
-    @media (prefers-reduced-motion: reduce){
-      .spin{ animation: none }
-    }
   </style>
 </head>
 <body>
   <main class="wrap" role="main" aria-live="polite">
-    <!-- Ingranaggio SVG con gradiente -->
+    <!-- Ingranaggio semplice monocolore -->
     <div class="logo" aria-hidden="true">
-      <svg class="gear" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" role="img">
-        <defs>
-          <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
-            <stop offset="0%" stop-color="#24597a"/>
-            <stop offset="100%" stop-color="#0aa2c0"/>
-          </linearGradient>
-        </defs>
-        <!-- ruota -->
-        <g class="spin" fill="url(#g)">
-          <path d="M57.4 6.5l2.3 8.9a33.7 33.7 0 0 1 9.4 4.3l8-4.3 7.8 13.6-7.3 5.2a33.6 33.6 0 0 1 1.5 10.4l8.4 3-4.9 15.1-8.7-1.3a33.9 33.9 0 0 1-7.9 8l3.7 8.3-13.6 7.8-5.5-7.4a33.8 33.8 0 0 1-10.5 1.5l-3.2 8.6-15.1-5 1.5-8.7a33.7 33.7 0 0 1-8.2-7.8l-8.5 3.7-7.8-13.6 7.6-5.6a33.6 33.6 0 0 1-1.2-10.4l-8.9-3 5-15.1 9 1.3a33.7 33.7 0 0 1 7.5-8.1l-3.9-8.3L39.7 5l5.7 7.5c3.8-.6 7.4-.6 11.9-.9zM50 34a16 16 0 1 0 0 32 16 16 0 0 0 0-32z"/>
-        </g>
-        <!-- disco centrale -->
-        <circle cx="50" cy="50" r="17" fill="#0aa2c0"/>
+      <svg class="gear spin" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" role="img">
+        <path fill="var(--gear)" d="M56.9 6.5l2.1 8.2a32.1 32.1 0 0 1 8.9 4.1l7.5-4 7.3 12.7-6.9 4.8a32.1 32.1 0 0 1 1.4 9.7l7.8 2.8-4.6 14.1-8.1-1.2a32.3 32.3 0 0 1-7.5 7.5l3.4 7.7-12.7 7.3-5.1-6.9a32.2 32.2 0 0 1-9.8 1.4l-3 8-14.1-4.7 1.4-8.1a32 32 0 0 1-7.7-7.3l-8 3.4-7.3-12.7 7.1-5.2a32 32 0 0 1-1.1-9.7l-8.4-2.8 4.7-14.1 8.4 1.2a32 32 0 0 1 7.1-7.6l-3.6-7.8L39 5l5.3 7c3.5-.6 6.9-.6 12.6-.9zM50 33a17 17 0 1 0 0 34 17 17 0 0 0 0-34z"/>
       </svg>
-      <div class="gis" aria-hidden="true">GIS</div>
     </div>
 
     <h1>Sito in manutenzione</h1>
     <p>Stiamo lavorando per migliorare il servizio.<br>Si invita a riprovare più tardi.</p>
     <p class="muted">Dominio: <strong>www.tutelapaesaggiosardegna.info</strong></p>
-
-    <div class="actions">
-      <a class="btn" href="https://www.tutelapaesaggiosardegna.info" rel="noopener">Vai al sito</a>
-      <a class="btn" href="" onclick="location.reload(); return false;">Riprova</a>
-    </div>
   </main>
 </body>
 </html>
