Update heading and subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       color: #444444;
       margin-bottom: 0.5rem;
     }
+   h2 {
+      font-size: clamp(18px, 3vw, 30px);
+      color: #444444;
+      margin-bottom: 0.5rem;
+    }
     p {
       font-size: clamp(16px, 2vw, 18px);
       line-height: 1.6;
@@ -35,7 +40,8 @@
 </head>
 <body>
   <main>
-    <h1>Sito in manutenzione</h1>
+    <h1>Tutela Paesaggio Sardegna</h1>
+    <h2>Sito in manutenzione</h2>
     <p>Stiamo lavorando per migliorare il servizio.<br>
     La invitiamo a riprovare più tardi.</p>
   </main>
