--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1>Tutela Paesaggio Sardegna</h1>
     <h2>Sito in manutenzione</h2>
     <p>Stiamo lavorando per migliorare il servizio.<br>
-    La invitiamo a riprovare più tardi.</p>
+    Vi invitiamo a riprovare più tardi.</p>
   </main>
 </body>
 </html>
