Add line break after maintenance message

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <main>
     <h1>Tutela Paesaggio Sardegna</h1>
-    <h2>Sito in manutenzione</h2>
+    <h2>Sito in manutenzione</h2><br>
     <p>Stiamo lavorando per migliorare il servizio.<br>
     Vi invitiamo a riprovare più tardi.</p>
   </main>
