--- a/index.html
+++ b/index.html
@@ -5,45 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sito in manutenzione – Tutela Paesaggio Sardegna</title>
   <meta name="robots" content="noindex,nofollow">
+
+  <!-- Google Material Symbols -->
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <style>
+    :root {
+      --primary-color: #2b5a83;
+      --text-color: #333333;
+      --bg-color: #ffffff;
+    }
+
     body {
       margin: 0;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #ffffff;
-      color: #333333;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
       text-align: center;
       padding: 2rem;
     }
+
     main {
-      max-width: 400px;
+      max-width: 420px;
     }
+
     h1 {
       font-size: clamp(22px, 3vw, 30px);
-      color: #444444;
-      margin-bottom: 0.5rem;
+      color: var(--primary-color);
+      margin-bottom: 0.25rem;
     }
-   h2 {
-      font-size: clamp(18px, 3vw, 30px);
-      color: #444444;
-      margin-bottom: 0.5rem;
+
+    h2 {
+      font-size: clamp(18px, 2.5vw, 22px);
+      color: #444;
+      margin-bottom: 1rem;
     }
+
     p {
       font-size: clamp(16px, 2vw, 18px);
       line-height: 1.6;
       margin: 0;
     }
+
+    .icon {
+      display: inline-block;
+      font-family: 'Material Symbols Outlined';
+      font-size: 64px;
+      color: var(--primary-color);
+      margin-bottom: 1rem;
+      animation: spin 5s linear infinite;
+    }
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    footer {
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
   </style>
 </head>
 <body>
   <main>
+    <span class="icon">settings</span>
     <h1>Tutela Paesaggio Sardegna</h1>
-    <h2>Sito in manutenzione</h2><br>
+    <h2>Sito in manutenzione</h2>
     <p>Stiamo lavorando per migliorare il servizio.<br>
     Vi invitiamo a riprovare più tardi.</p>
+    <footer>© Tutela Paesaggio Sardegna</footer>
   </main>
 </body>
 </html>
