Refine styles and update maintenance message
Updated margin and text for improved layout and clarity.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       --primary-color: #2b5a83;   /* colore blu istituzionale */
       --text-color: #333333;
       --bg-color: #ffffff;
-      --raise: -10vh; /* per alzare/abbassare il blocco */
+      --raise: -10vh; /* alzare/abbassare il blocco */
     }
 
     body {
@@ -47,7 +47,7 @@
       font-family: 'Material Symbols Outlined';
       font-size: 68px;
       color: var(--primary-color);
-      margin: 0.25rem 0 1.2rem 0; /* più spazio sotto il titolo */
+      margin: 0.25rem 0 0.6rem 0; /* più vicino al titolo */
       animation: spin 5s linear infinite;
     }
 
@@ -58,8 +58,8 @@
 
     h2 {
       font-size: clamp(18px, 2.5vw, 22px);
-      color: var(--primary-color); /* stesso colore del titolo */
-      margin: 0 0 1rem 0;
+      color: var(--primary-color);
+      margin: 0.3rem 0 1.8rem 0; /* avvicinato alla ruota, allontanato dal testo */
     }
 
     p {
@@ -80,8 +80,8 @@
     <h1>Tutela Paesaggio Sardegna</h1>
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
-    <p>Si stanno effettuando aggiornamenti per migliorare il servizio.<br>
-    Si invita a riprovare più tardi.</p>
+    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi.<br>
+    Si prega di riprovare più tardi. Grazie per la comprensione.</p>
     <footer>© Tutela Paesaggio Sardegna</footer>
   </main>
 </body>
