--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     h1 {
       font-size: clamp(22px, 3vw, 30px);
       color: var(--primary-color);
-      margin: 0 0 0.75rem 0;
+      margin: 0 0 2rem 0;
     }
 
     .icon {
@@ -80,9 +80,10 @@
     <h1>Tutela Paesaggio Sardegna</h1>
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
-    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi.<br>
-    Si prega di riprovare più tardi. Grazie per la comprensione.</p>
-    <footer>© Tutela Paesaggio Sardegna</footer>
+    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi o dell'infrastruttuora.<br>
+    Si prega di riprovare più tardi. <p>br> Grazie per la comprensione.</p>
+    <footer>Tutela Paesaggio Sardegna </ br> diVP © 2025 </footer>
+    
   </main>
 </body>
 </html>
