--- a/index.html
+++ b/index.html
@@ -32,14 +32,21 @@
     }
 
     main {
-      max-width: 420px;
+      max-width: 440px;
       transform: translateY(var(--raise));
+    }
+
+    /* Logo */
+    .logo {
+      width: 120px;
+      height: auto;
+      margin-bottom: 1rem;
     }
 
     h1 {
       font-size: clamp(22px, 3vw, 30px);
       color: var(--primary-color);
-      margin: 0 0 2rem 0;
+      margin: 0 0 1.5rem 0;
     }
 
     .icon {
@@ -47,7 +54,7 @@
       font-family: 'Material Symbols Outlined';
       font-size: 68px;
       color: var(--primary-color);
-      margin: 0.25rem 0 0.6rem 0; /* più vicino al titolo */
+      margin: 0.25rem 0 0.6rem 0;
       animation: spin 5s linear infinite;
     }
 
@@ -59,13 +66,13 @@
     h2 {
       font-size: clamp(18px, 2.5vw, 22px);
       color: var(--primary-color);
-      margin: 0.3rem 0 1.8rem 0; /* avvicinato alla ruota, allontanato dal testo */
+      margin: 0.3rem 0 1.8rem 0;
     }
 
     p {
       font-size: clamp(16px, 2vw, 18px);
       line-height: 1.6;
-      margin: 0;
+      margin: 0 0 0.5rem 0;
     }
 
     footer {
@@ -77,13 +84,20 @@
 </head>
 <body>
   <main>
+    <!-- Logo sopra il titolo -->
+    <img src="LogoTPSdiVP_alfa.png" alt="Logo Tutela Paesaggio Sardegna" class="logo">
+
     <h1>Tutela Paesaggio Sardegna</h1>
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
-    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi o dell'infrastruttuora.<br>
-    Si prega di riprovare più tardi. <p>br> Grazie per la comprensione.</p>
-    <footer>Tutela Paesaggio Sardegna </ br> diVP © 2025 </footer>
-    
+
+    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi o dell’infrastruttura.</p>
+    <p>Si prega di riprovare più tardi.<br>Grazie per la comprensione.</p>
+
+    <footer>
+      Tutela Paesaggio Sardegna<br>
+      diVP © 2025
+    </footer>
   </main>
 </body>
 </html>
