--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
       transform: translateY(var(--raise));
     }
 
-    /* Logo */
     .logo {
-      width: 120px;
+      width: 80px;
       height: auto;
       margin-bottom: 1rem;
+      opacity: 0.85;     
+      transition: opacity 0.5s ease; 
     }
 
     h1 {
