--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
       transform: translateY(var(--raise));
     }
 
+    /* Logo */
     .logo {
       width: 80px;
       height: auto;
       margin-bottom: 1rem;
       opacity: 0.85;     
       transition: opacity 0.5s ease; 
+    }
+    .logo:hover {
+      opacity: 1;
     }
 
     h1 {
@@ -55,6 +59,7 @@
       font-family: 'Material Symbols Outlined';
       font-size: 35px;
       color: var(--primary-color);
+      margin-bottom: 0.5rem;
       animation: spin 5s linear infinite;
     }
 
@@ -91,8 +96,8 @@
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
 
-    <p>Il sito è temporaneamente non disponibile per interventi di aggiornamento e miglioramento dei servizi o dell’infrastruttura.</p>
-    <p>Si prega di riprovare più tardi.<br>Grazie per la comprensione.</p>
+    <p>Stiamo effettuando alcuni aggiornamenti per offrirle un servizio sempre migliore.<br>
+    Il sito tornerà disponibile a breve.</p>
 
     <footer>
       Tutela Paesaggio Sardegna<br>
