--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <style>
     :root {
-      --primary-color: #2b5a83;
+      --primary-color: #707e8a;  /* nuovo colore istituzionale */
       --text-color: #333333;
       --bg-color: #ffffff;
       --footer-color: #777;
@@ -57,8 +57,9 @@
     .icon {
       display: inline-block;
       font-family: 'Material Symbols Outlined';
-      font-size: 25px;
+      font-size: 35px;
       color: var(--primary-color);
+      margin-bottom: 0.5rem;
       animation: spin 5s linear infinite;
     }
 
@@ -87,7 +88,7 @@
 
     .mail {
       text-decoration: none;
-      color: var(--footer-color); /* stesso colore del testo footer */
+      color: var(--footer-color);
       transition: color 0.3s ease;
     }
     .mail:hover {
@@ -95,7 +96,7 @@
     }
     .mail-icon {
       font-family: 'Material Symbols Outlined';
-      font-size: 20px;
+      font-size: 22px;
       vertical-align: middle;
     }
   </style>
@@ -108,8 +109,8 @@
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
 
-    <p>Stiamo effettuando alcuni aggiornamenti per offrirle un servizio sempre migliore.<br><br>
-    Il sito tornerà disponibile a breve.<br> Grazie per la comprensione!</p>
+    <p>Stiamo effettuando alcuni aggiornamenti per offrirle un servizio sempre migliore.<br>
+    Il sito tornerà disponibile a breve.</p>
 
     <footer>
       Tutela Paesaggio Sardegna<br>
