--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <style>
     :root {
-      --primary-color: #707e8a;  /* nuovo colore istituzionale */
+      --primary-color: #707e8a;
       --text-color: #333333;
       --bg-color: #ffffff;
       --footer-color: #777;
@@ -41,17 +41,16 @@
       width: 80px;
       height: auto;
       margin-bottom: 1rem;
-      opacity: 0.5;
+      opacity: 0.85;
       transition: opacity 0.5s ease;
     }
-    .logo:hover {
-      opacity: 1;
-    }
+    .logo:hover { opacity: 1; }
 
+    /* —— Spaziatura più stretta tra titolo, icona e sottotitolo —— */
     h1 {
       font-size: clamp(22px, 3vw, 30px);
       color: var(--primary-color);
-      margin: 0 0 1.5rem 0;
+      margin: 0 0 0.35rem 0;   /* era 1.5rem */
     }
 
     .icon {
@@ -59,7 +58,7 @@
       font-family: 'Material Symbols Outlined';
       font-size: 35px;
       color: var(--primary-color);
-      margin-bottom: 0.5rem;
+      margin: 0 0 0.3rem 0;    /* era 0.5rem */
       animation: spin 5s linear infinite;
     }
 
@@ -71,7 +70,7 @@
     h2 {
       font-size: clamp(18px, 2.5vw, 22px);
       color: var(--primary-color);
-      margin: 0.3rem 0 1.8rem 0;
+      margin: 0 0 1.1rem 0;    /* era 1.8rem */
     }
 
     p {
@@ -91,9 +90,8 @@
       color: var(--footer-color);
       transition: color 0.3s ease;
     }
-    .mail:hover {
-      color: var(--primary-color);
-    }
+    .mail:hover { color: var(--primary-color); }
+
     .mail-icon {
       font-family: 'Material Symbols Outlined';
       font-size: 22px;
