--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <span class="icon" aria-hidden="true">settings</span>
     <h2>Sito in manutenzione</h2>
 
-    <p>Stiamo effettuando alcuni aggiornamenti per offrirle un servizio sempre migliore.<br>
-    Il sito tornerà disponibile a breve.</p>
+    <p>Stiamo effettuando alcuni aggiornamenti per offrirle un servizio sempre migliore.<br><br>
+    Il sito tornerà disponibile a breve.<br> Grazie per la comprensione!</p>
 
     <footer>
       Tutela Paesaggio Sardegna<br>
