--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       width: 80px;
       height: auto;
       margin-bottom: 1rem;
-      opacity: 0.85;
+      opacity: 0.7;
       transition: opacity 0.5s ease;
     }
     .logo:hover { opacity: 1; }
@@ -49,8 +49,7 @@
     /* —— Spaziatura più stretta tra titolo, icona e sottotitolo —— */
     h1 {
       font-size: clamp(22px, 3vw, 30px);
-      color: var(--primary-color);
-      margin: 0 0 0.35rem 0;   /* era 1.5rem */
+      margin: 0 0 3rem
     }
 
     .icon {
