Change h1 color to #4b4b4b

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     /* —— Spaziatura più stretta tra titolo, icona e sottotitolo —— */
     h1 {
       font-size: clamp(22px, 3vw, 30px);
+      color: #4b4b4b;
       margin: 0 0 3rem
     }
 
