--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
     }
     .logo:hover { opacity: 1; }
 
-    /* —— Spaziatura più stretta tra titolo, icona e sottotitolo —— */
     h1 {
       font-size: clamp(22px, 3vw, 30px);
       color: #4b4b4b;
@@ -63,7 +62,7 @@
       font-family: 'Material Symbols Outlined';
       font-size: 35px;
       color: var(--primary-color);
-      margin: 0 0 0.3rem 0;    /* era 0.5rem */
+      margin: 0 0 0.3rem 0;
       animation: spin 5s linear infinite;
     }
 
@@ -75,7 +74,7 @@
     h2 {
       font-size: clamp(18px, 2.5vw, 22px);
       color: var(--primary-color);
-      margin: 0 0 1.1rem 0;    /* era 1.8rem */
+      margin: 0 0 1.1rem 0;
     }
 
     p {
@@ -84,15 +83,15 @@
       margin: 0 0 0.5rem 0;
     }
 
-    /* —— Bottone “Riprova” con bordo e testo grigi, senza riempimento —— */
+    /* —— Bottone “Riprova” più stretto —— */
     .btn {
       display: inline-block;
       margin-top: 1rem;
-      padding: 0.75rem 1.25rem;
+      padding: 0.6rem 1rem;                  /* più stretto */
       border-radius: 999px;
-      background: transparent;                      /* nessun riempimento */
-      border: 2px solid var(--btn-border);          /* solo bordo */
-      color: var(--btn-border);                     /* testo grigio */
+      background: transparent;               /* nessun riempimento */
+      border: 2px solid var(--btn-border);   /* solo bordo */
+      color: var(--btn-border);              /* testo grigio */
       text-decoration: none;
       font-weight: 600;
       letter-spacing: 0.02em;
@@ -104,8 +103,8 @@
       color: var(--btn-hover);
     }
     .btn:active {
-      border-color: var(--btn-active);              /* nero al clic */
-      color: var(--btn-active);                     /* nero al clic */
+      border-color: var(--btn-active);       /* nero al clic */
+      color: var(--btn-active);              /* nero al clic */
       transform: translateY(1px);
     }
     .btn:focus-visible {
@@ -132,7 +131,6 @@
       vertical-align: middle;
     }
 
-    /* Rispetto delle preferenze di riduzione animazioni */
     @media (prefers-reduced-motion: reduce) {
       .icon { animation: none; }
       .logo { transition: none; }
