--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <!-- Bottone Riprova -->
     <a class="btn"
-       href="https://www.tutelapaesaggiosardegna.info"
+       href="https://www.tutelapaesaggiosardegna.it"
        rel="noopener"
        aria-label="Riprova ad aprire il sito Tutela Paesaggio Sardegna">
        Riprova
